--- a/src/templates/time-schedule.html
+++ b/src/templates/time-schedule.html
@@ -70,323 +70,14 @@ block main %}
             </label>
           </div>
         </div>
-        <form>
-          <!-- Sunday -->
-          <div class="mb-5" id="container-sunday">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="sunday"
-                  name="days"
-                  type="checkbox"
-                  value="sunday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="sunday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Sun</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-sunday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-sunday"
-                    name="start-time-sunday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-sunday" class="sr-only">End time:</label>
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-sunday"
-                    name="end-time-sunday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Monday -->
-          <div class="mb-5">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="monday"
-                  name="days"
-                  type="checkbox"
-                  value="monday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="monday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Mon</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-monday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-monday"
-                    name="start-time-monday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-monday" class="sr-only">End time:</label>
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-monday"
-                    name="end-time-monday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Tuesday -->
-          <div class="mb-5">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="tuesday"
-                  name="days"
-                  type="checkbox"
-                  value="tuesday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="tuesday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Tue</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-tuesday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-tuesday"
-                    name="start-time-tuesday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-tuesday" class="sr-only">End time:</label>
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-tuesday"
-                    name="end-time-tuesday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Wednesday -->
-          <div class="mb-5">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="wednesday"
-                  name="days"
-                  type="checkbox"
-                  value="wednesday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="wednesday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Wed</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-wednesday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-wednesday"
-                    name="start-time-wednesday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-wednesday" class="sr-only"
-                  >End time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-wednesday"
-                    name="end-time-wednesday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Thursday -->
-          <div class="mb-5">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="thursday"
-                  name="days"
-                  type="checkbox"
-                  value="thursday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="thursday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Thu</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-thursday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-thursday"
-                    name="start-time-thursday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-thursday" class="sr-only">End time:</label>
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-thursday"
-                    name="end-time-thursday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Friday -->
-          <div class="mb-5">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="friday"
-                  name="days"
-                  type="checkbox"
-                  value="friday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="friday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Fri</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-friday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-friday"
-                    name="start-time-friday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-friday" class="sr-only">End time:</label>
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-friday"
-                    name="end-time-friday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Saturday -->
-          <div class="mb-5" id="container-saturday">
-            <div class="flex items-center justify-between gap-3 sm:gap-5">
-              <div class="flex items-center min-w-[4rem]">
-                <input
-                  id="saturday"
-                  name="days"
-                  type="checkbox"
-                  value="saturday"
-                  class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                <label
-                  for="saturday"
-                  class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                  >Sat</label
-                >
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="start-time-saturday" class="sr-only"
-                  >Start time:</label
-                >
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="start-time-saturday"
-                    name="start-time-saturday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-              <div class="w-full max-w-[7.5rem]">
-                <label for="end-time-saturday" class="sr-only">End time:</label>
-                <div class="relative">
-                  <input
-                    type="time"
-                    id="end-time-saturday"
-                    name="end-time-saturday"
-                    class="bg-gray-50 border leading-none border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    value="00:00"
-                    required />
-                </div>
-              </div>
-            </div>
-          </div>
+        <form id="form">
+          <script
+            type="module"
+            src="{{url_for('static',filename='js/scheduler-component.js')}}"></script>
 
           <!-- Submit buttons -->
           <div
-            class="grid grid-cols-2 gap-4 bottom-4 left-0 w-full md:px-4 md:absolute">
+            class="grid grid-cols-2 gap-4 bottom-4 left-0 w-full md:px-4 absolute">
             <button
               type="button"
               data-drawer-hide="drawer-timepicker"
@@ -405,5 +96,7 @@ block main %}
   </div>
 </div>
 
-<script src="{{url_for('static',filename='js/time-schedule.js')}}"></script>
+<script
+  type="module"
+  src="{{url_for('static',filename='js/time-schedule.js')}}"></script>
 {% endblock %}
