--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -1,5 +1,5 @@
 <nav
-  class="bg-white border-b border-gray-200 px-4 py-2.5 dark:bg-gray-800 dark:border-gray-700 fixed inset-x-0 top-0 z-50">
+  class="bg-white shadow-sm dark:shadow-md px-4 py-2.5 dark:bg-gray-800 dark:border-gray-700 fixed inset-x-0 top-0 z-50">
   <div class="flex flex-wrap justify-between items-center">
     <div class="flex justify-start items-center">
       <button
@@ -34,7 +34,7 @@
       <a href="/" class="flex items-center justify-between mr-4">
         <span
           class="self-center text-lg sm:text-xl font-semibold whitespace-nowrap dark:text-white"
-          >Daily Time Recorder</span
+          >Time Recorder</span
         >
       </a>
     </div>
@@ -105,13 +105,13 @@
               >My profile</a
             >
           </li>
-          <li>
+          <!-- <li>
             <a
               href="#"
               class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"
               >Account settings</a
             >
-          </li>
+          </li> -->
         </ul>
         <ul
           class="py-1 text-gray-700 dark:text-gray-300"
@@ -145,7 +145,7 @@
               </label>
             </button>
           </li>
-          <li>
+          <!-- <li>
             <a
               href="#"
               class="flex items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
@@ -159,7 +159,7 @@
               </svg>
               Collections</a
             >
-          </li>
+          </li> -->
         </ul>
         <ul
           class="py-1 text-gray-700 dark:text-gray-300"
@@ -167,7 +167,7 @@
           <li>
             <button
               id="logout-button"
-              class="block w-full text-left py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+              class="block w-full text-left py-2 px-4 text-sm hover:rounded-b-lg hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
               Sign out
             </button>
           </li>
