new and improved

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -51,14 +51,9 @@
         </a>
         <div class="flex items-center gap-7">
           <a
-            class="text-sm font-medium hover:underline dark:text-gray-100 underline-offset-4"
-            href="{{ url_for('sign_in') }}">
-            Login
-          </a>
-          <a
             class="inline-flex items-center px-6 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-            href="{{ url_for('sign_up') }}">
-            Sign Up
+            href="{{ url_for('sign_in') }}">
+            Sign In
           </a>
         </div>
       </header>
