--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -25,6 +25,7 @@
   </head>
   <body class="bg-gray-50 dark:bg-gray-900">
     <div id="progress-bar"></div>
+    {% include "includes/toast.html" %}
 
     <div class="px-4">
       {% if not session.get('user_id') %}
@@ -63,7 +64,7 @@
         class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t dark:border-gray-800">
         <p
           class="w-full text-xs font-semibold text-gray-500 dark:text-gray-400 text-center">
-          © 2024 Daily Time Recorder. All rights reserved.
+          © {{ current_year }} Daily Time Recorder. All rights reserved.
         </p>
       </footer>
       {% endif %}
