--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -5,6 +5,10 @@ main %}
   "includes/dashboard-sidebar.html" %}
   <main
     class="p-4 h-auto mt-[76px] max-w-[calc(1440px_-_15rem)] md:ml-60 2xl:mx-auto 2xl:px-8">
+    <div class="text-gray-950 dark:text-white mb-4">
+      <h3 class="text-2xl font-semibold p-0 m-0">Today</h3>
+      <p id="date-time">{{ date }}</p>
+    </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
       <div
         class="border-2 border-dashed border-gray-300 rounded-lg dark:border-gray-600 h-32 md:h-64"></div>
