--- a/src/templates/time-schedule.html
+++ b/src/templates/time-schedule.html
@@ -6,6 +6,7 @@ block main %}
     {% include "includes/dashboard-header.html" %}
     <main
       class="flex-1 p-6 md:p-8 flex flex-col gap-6 justify-center items-center">
+      {% if not schedules %}
       <p class="text-sm text-gray-500 dark:text-gray-400 font-normal">
         No schedules available ...
       </p>
@@ -20,76 +21,63 @@ block main %}
           Set schedule now
         </button>
       </div>
+      {% else %}
+      <section class="text-white">
+        <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+          <table
+            class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead
+              class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+              <tr>
+                <th scope="col" class="px-6 py-3">Day</th>
+                <th scope="col" class="px-6 py-3">Shift</th>
+                <th scope="col" class="px-6 py-3">Schedule</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for schedule in schedules %}
+              <tr
+                class="bg-white border-b hover:bg-gray-50 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-600">
+                <th
+                  scope="row"
+                  class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  {{ schedule.day }}
+                </th>
+
+                {% if schedule.day_off == True %}
+                <td class="px-6 py-4">Day off</td>
+                {% else %}
+                <td class="px-6 py-4">{{ schedule.shift_type }}</td>
+                {% endif %} {% if schedule.shift_type == 'Opener' %}
+                <td class="px-6 py-4">6:00 AM - 3:00 PM</td>
+                {% elif schedule.shift_type == 'Regular' %}
+                <td class="px-6 py-4">8:30 AM - 5:30 PM</td>
+                {% elif schedule.shift_type == 'Closer' %}
+                <td class="px-6 py-4">1:00 PM - 10:00 PM</td>
+                {% else %}
+                <td class="px-6 py-4"></td>
+                {% endif %}
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </section>
+      {% endif %}
       <!-- drawer component -->
       <div
         id="drawer-timepicker"
-        class="fixed top-0 left-0 z-[51] h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white max-w-96 dark:bg-gray-800 shadow"
+        class="fixed top-0 left-0 z-[51] h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-full max-w-sm dark:bg-gray-800 shadow"
         tabindex="-1"
         aria-labelledby="drawer-timepicker-label">
-        <h5
-          id="drawer-label"
-          class="inline-flex items-center mb-4 text-base py-1 font-semibold text-gray-500 uppercase dark:text-gray-400">
-          Set Schedule
-        </h5>
-        <button
-          type="button"
-          data-drawer-hide="drawer-timepicker"
-          aria-controls="drawer-timepicker"
-          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white">
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14">
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-          </svg>
-          <span class="sr-only">Close menu</span>
-        </button>
-        <div
-          class="rounded-lg border-[2px] border-blue-300 bg-gray-50 px-4 py-3 dark:border-gray-600 dark:bg-gray-700 mb-4 shadow-sm">
-          <div class="flex justify-between items-center">
-            <span class="text-gray-900 dark:text-white text-base font-medium"
-              >Weekdays</span
-            >
-            <label class="inline-flex items-center cursor-pointer">
-              <input
-                type="checkbox"
-                value=""
-                name="business-days"
-                id="business-days"
-                class="sr-only peer" />
-              <div
-                class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-600 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
-              <span class="sr-only">Weekdays</span>
-            </label>
-          </div>
-        </div>
-        <form id="form">
+        {% include "includes/sched_headers.html" %}
+        <form id="form" class="mt-5" method="POST">
           <script
             type="module"
             src="{{url_for('static',filename='js/scheduler-component.js')}}"></script>
 
           <!-- Submit buttons -->
-          <div
-            class="grid grid-cols-2 gap-4 bottom-4 left-0 w-full md:px-4 absolute">
-            <button
-              type="button"
-              data-drawer-hide="drawer-timepicker"
-              class="py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-              Close
-            </button>
-            <button
-              type="submit"
-              class="text-white w-full inline-flex items-center justify-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-              Save all
-            </button>
-          </div>
+          {% include "includes/sched_submit_btns.html" %}
         </form>
       </div>
     </main>
