--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -79,7 +79,7 @@
         <img
           id="header-profile"
           class="w-8 h-8 rounded-full"
-          src="{{ image_src }}"
+          src="{{ avatar }}"
           alt="user photo" />
       </button>
       <!-- Dropdown menu -->
