--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,8 +24,9 @@
           >
         </div>
       </div>
-      <div class="order-1 lg:order-2">
+      <div class="hero-image-wrapper relative inline-block order-1 lg:order-2">
         <img
+          class="block w-full h-auto"
           src="{{url_for('static', filename='assets/time-illustration.webp')}}"
           alt="Hero Illustration" />
       </div>
