--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -59,3 +59,15 @@ div[data-category='success'] {
   color: #02b775;
   border-color: #02b775;
 }
+
+html.dark .hero-image-wrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background: radial-gradient(circle, rgba(0, 0, 0, 0) 40%, rgb(17 24 39 / 1));
+  mix-blend-mode: multiply;
+}
