admin delete user

--- a/src/templates/admin/delete-user-modal.html
+++ b/src/templates/admin/delete-user-modal.html
@@ -39,10 +39,8 @@
         <h3 class="mt-5 mb-6 text-lg text-gray-500 dark:text-gray-400">
           Are you sure you want to delete this user?
         </h3>
-        <form
-          id="delete-user-form"
-          method="POST"
-          class="inline-flex items-center">
+        <form id="delete-user-form" class="inline-flex items-center">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <input type="hidden" name="user_id" id="user-id-input" value="" />
           <button
             type="submit"
