--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -28,7 +28,7 @@
 
     <script
       type="module"
-      src="{{ url_for('static', filename='js/utils/populate-delete.js') }}"></script>
+      src="{{ url_for('static', filename='js/admin/delete_user.js') }}"></script>
   </main>
 </div>
 
