--- a/src/templates/admin/user-table.html
+++ b/src/templates/admin/user-table.html
@@ -2,20 +2,15 @@
   class="min-w-full divide-y divide-gray-200 table-fixed dark:divide-gray-600">
   <thead class="bg-gray-100 dark:bg-gray-700">
     <tr>
-      <th scope="col" class="p-4">
-        <div class="flex items-center">
-          <input
-            id="checkbox-all"
-            aria-describedby="checkbox-1"
-            type="checkbox"
-            class="w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:focus:ring-primary-600 dark:ring-offset-gray-800 dark:bg-gray-700 dark:border-gray-600" />
-          <label for="checkbox-all" class="sr-only">checkbox</label>
-        </div>
-      </th>
       <th
         scope="col"
         class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
         Name
+      </th>
+      <th
+        scope="col"
+        class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
+        Position
       </th>
       <th
         scope="col"
@@ -33,16 +28,6 @@
     class="bg-white divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700">
     {% for user in users %}
     <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
-      <td class="w-4 p-4">
-        <div class="flex items-center">
-          <input
-            id="checkbox-{{ user.id }}"
-            aria-describedby="checkbox-1"
-            type="checkbox"
-            class="w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:focus:ring-primary-600 dark:ring-offset-gray-800 dark:bg-gray-700 dark:border-gray-600" />
-          <label for="checkbox-{{ user.id }}" class="sr-only">checkbox</label>
-        </div>
-      </td>
       <td class="flex items-center p-4 mr-12 space-x-6 whitespace-nowrap">
         {% if user.avatar %}
         <img
@@ -73,6 +58,11 @@
             {{ user.email }}
           </div>
         </div>
+      </td>
+      <td
+        class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white capitalize">
+        {{ employment_data[user.id].position if employment_data[user.id] else
+        'N/A' }}
       </td>
       <td
         class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white capitalize">
