--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -11,6 +11,7 @@ endblock %} {% block main %}
           Sign in to your account
         </h1>
         <form class="space-y-4 md:space-y-6" action="/sign-in" method="post">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div>
             <label
               for="email"
